--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.57",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.2.2",
     "styled-components": "^5.3.5",
     "tachyons": "^4.12.0",
+    "tsparticles": "^2.2.2",
+    "tsparticles-slim": "^2.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
