--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-parallax-tilt": "^1.7.57",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.2.2",
+    "serve": "^14.1.2",
     "styled-components": "^5.3.5",
     "tachyons": "^4.12.0",
     "tsparticles": "^2.2.2",
@@ -18,7 +19,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
